@@ -84,6 +84,10 @@ Version 8.38 xx-xxx-xxxx
 21. Fix infinite recursion in the JIT compiler when certain patterns such as
     /(?:|a|){100}x/ are analysed.
 
+22. Some patterns with character classes involving [: and \\ were incorrectly
+    compiled and could cause reading from uninitialized memory or an incorrect
+    error diagnosis.
+
 
 Version 8.37 28-April-2015
 --------------------------
